<resources>
    <string name="app_name">FakeStoreChallenge</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_nback">Welcome \nBack!</string>
    <string name="category_name">Category Name</string>
    <string name="prompt_username_or_email">Username or Email</string>
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="all_featured">All Featured</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="product_title">Product Title</string>
    <string name="product_details">Product Details</string>
</resources>